--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,11 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: cayman
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
+destination: docs
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
